--- a/src/components/ui/Role/Role.css
+++ b/src/components/ui/Role/Role.css
@@ -11,7 +11,7 @@
 .roleTitle {
   /* border: 1px solid black; */
   background-color: #353c51;
-  padding: 0.2rem 3.5rem;
+  /* padding: 0.2rem 3.5rem; */
   border-radius: 0.5rem;
   font-weight: 400;
   color: rgb(255, 255, 255);
@@ -20,7 +20,9 @@
   font-size: 1.1rem;
   width: 262px;
   height: auto;
-  text-wrap: nowrap;
+  /* text-wrap: nowrap; */
+  max-width: 200px;
+  padding: 0.5rem;
 }
 
 @media (min-width: 769px) {
