fix: fix results styling and add body bg color

--- a/src/components/ui/Dropdown/Dropdown.scss
+++ b/src/components/ui/Dropdown/Dropdown.scss
@@ -30,6 +30,7 @@
 .dropdown-container {
   display: flex;
   align-items: center;
+  background-color: #fffffe;
 
   .selected-role {
     font-size: 1.5rem;
