--- a/src/components/ui/Result/Skills.scss
+++ b/src/components/ui/Result/Skills.scss
@@ -28,15 +28,25 @@
   gap: 1rem;
 }
 
-.skillsContainer h4,
-.leadContainer h4 {
-  font-size: 1.5rem;
+h4 {
+  color: #353c51;
+  text-align: center;
+  font-family: 'Funnel Display';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
 }
 
 .skillsContainer li,
 .leadContainer li {
   color: white;
   padding: 0.5rem;
+  font-family: 'Funnel Sans';
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .leadContainer {
@@ -45,34 +55,27 @@
 
 .industryContainer,
 .otherRolesContainer {
-  margin-top: 4rem;
+  margin-top: 4.5rem;
   padding: 0 1rem;
   text-align: center;
 }
 
-.industryContainer h4 {
-  font-size: 1.5rem;
-}
+.otherRolesContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
 
-.otherRolesContainer h4 {
-  font-size: 1.2rem;
-  color: #646676;
-}
-
-.otherRolesContainer li {
-  list-style: none;
-  background-color: #353c51;
-  margin-top: 2rem;
-  padding: 1rem 0rem;
-  color: white;
-  text-wrap: nowrap;
-  margin-inline: auto;
-}
-
-.otherRolesContainer a {
-  font-size: 1.2rem;
-  font-weight: 500;
-  width: fit-content;
+  h4 {
+    color: #646676;
+    font-family: 'Funnel Display';
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
 }
 
 .industryContainer p {
@@ -92,6 +95,6 @@
 
   .industryContainer p {
     margin: 1rem 3rem;
-    max-width: 800px;
+    max-width: 600px;
   }
 }
