--- a/src/global.scss
+++ b/src/global.scss
@@ -91,6 +91,7 @@ body {
   line-height: 1.5;
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
+  background-color: #fbfaf8;
 }
 
 img,
