--- a/src/components/ui/Result/Skills.scss
+++ b/src/components/ui/Result/Skills.scss
@@ -60,6 +60,10 @@ h4 {
   text-align: center;
 }
 
+.industryContainer p {
+  max-width: 500px;
+}
+
 .otherRolesContainer {
   display: flex;
   align-items: center;
@@ -95,6 +99,5 @@ h4 {
 
   .industryContainer p {
     margin: 1rem 3rem;
-    max-width: 600px;
   }
 }
