fix font color and remove icon

--- a/src/components/ui/Result/ResultCard.scss
+++ b/src/components/ui/Result/ResultCard.scss
@@ -11,7 +11,7 @@
   border-left: 4px dashed black;
   border-right: 4px dashed black;
   width: 304px;
-  height: 460;
+  height: 460px;
   padding: var(--S);
   background-color: #fffffe;
 
@@ -37,6 +37,6 @@
 @media (min-width: 768px) {
   .resultCard {
     width: 360px;
-    height: 460;
+    height: 460px;
   }
 }
