--- a/src/pages/Overview/Overview.scss
+++ b/src/pages/Overview/Overview.scss
@@ -136,6 +136,7 @@
       align-self: stretch;
       margin: 0 0 40px 0;
       padding: 20px 24px 24px 24px;
+      background-color: #fffffe;
     }
 
     .callout > h1 {
